2001-07-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (scm_ceval, scm_deval): Use "RETURN" macro when returning
	value of a variable, not the plain "return" statement.

2001-07-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c: Allow variables in memoized code (in addition to glocs).
	(scm_lookupcar): Handle variables in lost races.  Replace symbol
	with variable directly, do not make a gloc.
	(scm_unmemocar): Rewrite variables using a reverse lookup, just
	like glocs.
	(scm_ceval, scm_deval): Deal with variables in SCM_IM_SET and in
	the main switch.

2001-07-25  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* variable.c (scm_i_variable_print): Use "value" instead of
	"binding" since a binding is the mapping between symbols and
	variables, not between variables and their values.

	* tags.h (scm_tc7_variable): New.
	* gc.c (scm_gc_mark): Handle scm_tc7_variable objects.
	* print.c (scm_iprin1): Likewise.

	* variable.h (scm_tc16_variable): Removed.
	(SCM_VARIABLEP): Test for new tc7 code.
	(scm_i_variable_print): New.
	* variable.c (scm_tc16_variable): Removed.
	(variable_print): Renamed to scm_i_variable_print and made
	non-static.
	(variable_equal_p): Removed.
	(make_variable): Construct a tc7 object instead of a smob.
	(scm_init_variable): Do not register smob.
	
2001-07-22  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h: Include inttypes.h when we have it.

2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h (SCM_UNBOUND): Make it the 34th isym/iflag, the 33th slot
	is taken by the new SCM_IM_CALL_WITH_VALUES.
	* print.c (scm_isymnames): Update table accordingly.
	
2001-07-22  Gary Houston  <ghouston@arglist.com>

	* regex-posix.c (s_scm_regexp_exec): use scm_long2num not
	SCM_MAKINUM to convert regoff_t value to SCM.

2001-07-21  Gary Houston  <ghouston@arglist.com>

	* scmsigs.c: include sys/time.h for itimer stuff.

2001-07-19  Rob Browning  <rlb@defaultvalue.org>

	* gc_os_dep.c (GC_noop1): ifdef out (unused) to quiet warning.
